--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,35 +1,39 @@
-buildscript {
-  repositories {
-    jcenter()
-  }
-  //TODO: Update the gradle version BUT HOW??!?
-  dependencies {
-    classpath 'com.android.tools.build:gradle:1.2.3'
-  }
-}
-
 apply plugin: 'com.android.library'
 
+def safeExtGet(prop, fallback) {
+    rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
+}
+
+buildscript {
+    repositories {
+        google()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.2.1'
+    }
+}
+
 android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
+    compileSdkVersion safeExtGet('compileSdkVersion', 28)
+    buildToolsVersion safeExtGet('buildToolsVersion', "28.0.3")
 
     defaultConfig {
-        minSdkVersion 16
-        targetSdkVersion 22
+        minSdkVersion safeExtGet('minSdkVersion', 16)
+        targetSdkVersion safeExtGet('targetSdkVersion', 28)
         versionCode 1
         versionName "1.0"
     }
 }
 
 repositories {
-  mavenCentral()
-    maven {
-      url 'https://zendesk.jfrog.io/zendesk/repo'
-    }
+    mavenCentral()
+    jcenter()
+    google()
+    maven { url 'https://zendesk.jfrog.io/zendesk/repo' }
 }
 
 dependencies {
-    compile "com.facebook.react:react-native:+"
-    compile group: 'com.zopim.android', name: 'sdk', version: '1.4.4'
+    implementation "com.facebook.react:react-native:+"
+    implementation group: 'com.zopim.android', name: 'sdk', version: '1.4.7'
 }
